--- a/test-no-std/Cargo.toml
+++ b/test-no-std/Cargo.toml
@@ -11,4 +11,4 @@ libc = { version = "0.2", default-features = false }
 substrate-api-client = { path = "..", default-features = false }
 
 # substrate dependencies
-sp-io = { version = "4.0.0-dev", default-features = false, features = ["disable_oom", "disable_panic_handler"], git = "https://github.com/paritytech/substrate.git", branch = "master" }
+sp-io = { version = "5.0.0", default-features = false, features = ["disable_oom", "disable_panic_handler"], git = "https://github.com/paritytech/substrate.git", branch = "master" }
