--- a/compose-macros/Cargo.toml
+++ b/compose-macros/Cargo.toml
@@ -8,7 +8,7 @@ codec = { package = 'parity-scale-codec', version = "2.0.0", default-features = 
 log = { version = "0.4", default-features = false }
 
 # substrate dependencies
-sp-runtime = { version = "4.0.0-dev", default-features = false, git = "https://github.com/paritytech/substrate.git", branch = "master" }
+sp-runtime = { version = "5.0.0", default-features = false, git = "https://github.com/paritytech/substrate.git", branch = "master" }
 sp-std = { version = "4.0.0-dev", default-features = false, git = "https://github.com/paritytech/substrate.git", branch = "master" }
 
 # local deps
