--- a/client-keystore/Cargo.toml
+++ b/client-keystore/Cargo.toml
@@ -14,7 +14,7 @@ serde_json = "1.0"
 sp-core = { version = "5.0.0", default-features = false, git = "https://github.com/paritytech/substrate.git", branch = "master" }
 sp-keystore = { version = "0.11.0", git = "https://github.com/paritytech/substrate.git", branch = "master" }
 sc-keystore = { version = "4.0.0-dev", git = "https://github.com/paritytech/substrate.git", branch = "master" }
-sp-keyring = { version = "4.1.0-dev", git = "https://github.com/paritytech/substrate.git", branch = "master" }
+sp-keyring = { version = "5.0.0", git = "https://github.com/paritytech/substrate.git", branch = "master" }
 sp-application-crypto = { version = "5.0.0", git = "https://github.com/paritytech/substrate.git", branch = "master" }
 
 [dev-dependencies]
