--- a/client-keystore/Cargo.toml
+++ b/client-keystore/Cargo.toml
@@ -5,17 +5,17 @@ authors = ["Supercomputing Systems AG <info@scs.ch>"]
 edition = "2021"
 
 [dependencies]
-parking_lot = "0.11.1"
-async-trait = "0.1.30"
-hex = "0.4"
-serde_json = "1.0"
+parking_lot = "0.12.0"
+async-trait = "0.1.52"
+hex = "0.4.3"
+serde_json = "1.0.79"
 
 # Substrate dependencies
-sp-core = { version = "5.0.0", default-features = false, git = "https://github.com/paritytech/substrate.git", branch = "master" }
-sp-keystore = { version = "0.11.0", git = "https://github.com/paritytech/substrate.git", branch = "master" }
+sp-core = { version = "6.0.0", git = "https://github.com/paritytech/substrate.git", branch = "master" }
+sp-keystore = { version = "0.12.0", git = "https://github.com/paritytech/substrate.git", branch = "master" }
 sc-keystore = { version = "4.0.0-dev", git = "https://github.com/paritytech/substrate.git", branch = "master" }
-sp-keyring = { version = "5.0.0", git = "https://github.com/paritytech/substrate.git", branch = "master" }
-sp-application-crypto = { version = "5.0.0", git = "https://github.com/paritytech/substrate.git", branch = "master" }
+sp-keyring = { version = "6.0.0", git = "https://github.com/paritytech/substrate.git", branch = "master" }
+sp-application-crypto = { version = "6.0.0", git = "https://github.com/paritytech/substrate.git", branch = "master" }
 
 [dev-dependencies]
-tempfile = "3.2.0"
+tempfile = "3.3.0"
