--- a/node-api/Cargo.toml
+++ b/node-api/Cargo.toml
@@ -6,13 +6,14 @@ edition = "2021"
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
 
 [dependencies]
-codec = { package = 'parity-scale-codec', version = "2.0.0", features = ['derive']}
-hex = { version = "0.4.3" }
-log = { version = "0.4" }
-scale-info = { version = "1.0", features = ["derive"] }
-serde = { version = "1.0", features = ["derive"] }
-thiserror = { version = "1.0" }
-serde_json = { version = "1.0" }
+codec = { package = "parity-scale-codec", version = "3.0.0", features = ['derive'] }
+frame-metadata = { version = "15.0.0", features = ["v14"], package = "frame-metadata" }
+hex = "0.4.3"
+log = "0.4.14"
+scale-info = { version = "2.0.1", features = ["derive"] }
+serde = { version = "1.0.136", features = ["derive"] }
+thiserror = "1.0.30"
+serde_json = "1.0.79"
 
 # local deps
 ac-primitives = { path = "../primitives" }
@@ -20,8 +21,5 @@ ac-primitives = { path = "../primitives" }
 # substrate deps
 frame-support = { version = "4.0.0-dev", git = "https://github.com/paritytech/substrate.git", branch = "master" }
 frame-system = { version = "4.0.0-dev", git = "https://github.com/paritytech/substrate.git", branch = "master" }
-sp-core = { version = "5.0.0", git = "https://github.com/paritytech/substrate.git", branch = "master" }
-sp-runtime = { version = "5.0.0", git = "https://github.com/paritytech/substrate.git", branch = "master" }
-
-# new parity repo
-frame-metadata = { version = "14.0.0", git = "https://github.com/paritytech/frame-metadata.git", branch = "main", features = ["v14"] }
+sp-core = { version = "6.0.0", git = "https://github.com/paritytech/substrate.git", branch = "master" }
+sp-runtime = { version = "6.0.0", git = "https://github.com/paritytech/substrate.git", branch = "master" }
