--- a/Cargo.toml
+++ b/Cargo.toml
@@ -17,7 +17,9 @@ members = [
 [dependencies]
 hex = { version = "0.4.3", default-features = false, features = ["alloc"] }
 log = { version = "0.4.14", optional = true }
-metadata = { version = "15.0.0", default-features = false, package = "frame-metadata", features = ["v14"] }
+#TODO get from parity when our changes are accepted
+metadata = { version = "15.0.0", default-features = false, git = "https://github.com/integritee-network/frame-metadata", package = "frame-metadata", features = ["v14", "full_derive"] }
+#metadata = { version = "15.0.0", default-features = false, package = "frame-metadata", features = ["v14"] }
 primitive-types = { version = "0.11.1", optional = true, features = ["codec"] }
 serde = { version = "1.0.136", optional = true, features = ["derive"] }
 serde_json = { version = "1.0.79", optional = true }
@@ -43,7 +45,7 @@ sp-runtime-interface = { version = "6.0.0", default-features = false, git = "htt
 
 # local deps
 ac-compose-macros = { path = "compose-macros", default-features = false }
-ac-node-api = { path = "node-api", optional = true }
+ac-node-api = { path = "node-api", default-features = false }
 ac-primitives = { path = "primitives", default-features = false }
 
 [dev-dependencies]
@@ -82,7 +84,7 @@ std = [
 	"transaction-payment/std",
 	# local deps
 	"ac-compose-macros/std",
-	"ac-node-api",
+	"ac-node-api/std",
 	"ac-primitives/std",
 ]
 ws-client = ["ws"]
