[compose-macros] improve import resolution (#261)
* [compose-macros] import `ExtrinsicParams` into the scope, so it does not need to be imported in the caller's scope

* [compose-macros] import `sp_core::sr25519::Pair` into the scope, so it does not need to be imported in the caller's scope`

* [compose-macros] fix: import correct `Pair`

* fix clippy warning of unused import

* [examples] remove unused imports.

* [compose-macros] add `full_crypto` feature flag and `std` `sp-core`

* [test-no-std] add `compose-macros` to no-std buid

* [api-client] remove the `sp-application-crypto` dependency, which lives now under `compose-macros`

* [compose-macros] enable std in sp-application crypto

--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -32,6 +32,7 @@ jobs:
         # we omit clippy and test there.
         check: [ cargo build --release --all --exclude test-no-std,
                  cargo build --release -p test-no-std --features api-client,
+                 cargo build --release -p test-no-std --features compose-macros,
                  cargo build --release -p test-no-std --features node-api,
 
                  cargo clippy --all --exclude test-no-std -- -D warnings,
