--- a/compose-macros/Cargo.toml
+++ b/compose-macros/Cargo.toml
@@ -8,8 +8,12 @@ codec = { package = "parity-scale-codec", version = "3.0.0", default-features = 
 log = { version = "0.4.14", default-features = false }
 
 # substrate dependencies
+sp-core = { version = "6.0.0", default-features = false, features = ["full_crypto"], git = "https://github.com/paritytech/substrate.git", branch = "master" }
 sp-runtime = { version = "6.0.0", default-features = false, git = "https://github.com/paritytech/substrate.git", branch = "master" }
 sp-std = { version = "4.0.0-dev", default-features = false, git = "https://github.com/paritytech/substrate.git", branch = "master" }
+
+# need to add this for the app_crypto macro
+sp-application-crypto = { version = "6.0.0", default-features = false, git = "https://github.com/paritytech/substrate.git", branch = "master", features = ["full_crypto"] }
 
 # local deps
 ac-primitives = { path = "../primitives", default-features = false }
@@ -19,6 +23,8 @@ default = ["std"]
 std = [
     "codec/std",
     "log/std",
+    "sp-application-crypto/std",
+    "sp-core/std",
     "sp-runtime/std",
     "sp-std/std",
     # local crates
