--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -30,7 +30,9 @@ jobs:
         #
         # `test-no-std` is only meant to check if the `substrate-api-client` compiles to `no_std`, hence
         # we omit clippy and test there.
-        check: [ cargo build --release --all --exclude test-no-std,
+        #
+        # `--locked` to enforce an up-to-date Cargo.lock
+        check: [ cargo build --release --all --locked --exclude test-no-std,
                  cargo build --release -p test-no-std --features api-client,
                  cargo build --release -p test-no-std --features compose-macros,
                  cargo build --release -p test-no-std --features node-api,
