Add cargo.toml formatting with taplo (#281)
* Add cargo fmt with taplo

* Check Cargot.toml fmt in CI

* install taplo

* install taplo once

* add fmt job to remove taplo from matrix

* Use docker img for taplo. Test it is working with unformatted cargo.toml

* Taplo fmt

Co-authored-by: echevrier <edith.chevrier@scs.ch>

--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -56,6 +56,17 @@ jobs:
       - name: ${{ matrix.check }}
         run: ${{ matrix.check }}
 
+  cargo-toml-fmt:
+    runs-on: ubuntu-latest
+    container: "tamasfe/taplo:0.7.0-alpine"
+    steps:
+      - uses: actions/checkout@v3
+      - name: Run Taplo fmt
+        run: taplo fmt --check
+      - name: Fail-fast; cancel other jobs
+        if: failure()
+        uses: andymckay/cancel-action@0.2
+
   build-node-template:
     runs-on: ubuntu-latest
     steps:
@@ -140,3 +151,4 @@ jobs:
         timeout-minutes: 5
         run: |
           ./target/release/examples/${{ matrix.example }}
+
